# resumo-fiscal

./: .dockerignore  .gitignore  .hintrc  Dockerfile  Makefile  README.md  app.py  notas.txt  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
static/: output.css
templates/: index.html  resultado.html
