[project]
name = "resumo-fiscal"
version = "0.1.0"
description = "Sistema de análise de resumos fiscais"
authors = [
    {name = "Consult Contabil", email = "contato@consultcontabil.com.br"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "APScheduler==3.10.4",
    "attrs==23.1.0",
    "blinker==1.6.2",
    "certifi==2023.7.22",
    "cffi==1.15.1",
    "charset-normalizer==3.2.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "cpf-cnpj-validate==1.4",
    "cryptography==41.0.4",
    "exceptiongroup==1.1.3",
    "Flask==2.3.3",
    "gunicorn==21.2.0",
    "h11==0.14.0",
    "idna==3.4",
    "itsdangerous==2.1.2",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "outcome==1.2.0",
    "packaging==23.1",
    "pdfminer.six==20221105",
    "pdfplumber==0.10.2",
    "Pillow==10.0.1",
    "psycopg2-binary==2.9.7",
    "pycparser==2.21",
    "pypdfium2==4.26.0",
    "pyperclip==1.8.2",
    "PySocks==1.7.1",
    "python-dotenv==1.0.0",
    "pytz==2023.3.post1",
    "requests==2.31.0",
    "scheduler==0.8.4",
    "six==1.16.0",
    "sniffio==1.3.0",
    "sortedcontainers==2.4.0",
    "tabulate==0.9.0",
    "trio==0.22.2",
    "trio-websocket==0.10.4",
    "typeguard==4.1.5",
    "typing_extensions==4.8.0",
    "tzdata==2023.3",
    "tzlocal==5.0.1",
    "urllib3==2.0.4",
    "validation==0.8.3",
    "webdriver-manager==4.0.0",
    "websockets==11.0.3",
    "Werkzeug==2.3.7",
    "wsproto==1.2.0",
    "emoji==2.8.0",
    "tailwindcss",
    "babel>=2.17.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "app.py",
    "templates/**/*",
    "static/**/*",
    "*.txt",
    "*.md",
    "Procfile",
    "runtime.txt"
]

[tool.uv]
dev-dependencies = [] 
